--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "knn_j25ng"
-version = "1.0.1"
+version = "2.0.0"
 description = "Implements KNN model using KNeighborsClassifier"
 authors = [
     {name = "j25ng", email = "jsan2861@gmail.com"},
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.1.1",
     "pandas>=2.2.2",
     "scikit-learn>=1.5.1",
+    "matplotlib>=3.9.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -19,6 +20,7 @@ distribution = true
 
 [project.scripts]
 fish = "knn_j25ng.main:main"
+chart = "knn_j25ng.main:chart"
 
 [project.urls]
 Homepage = "https://github.com/j25ng/knn_j25ng"
